--- a/public/index.html
+++ b/public/index.html
@@ -7,20 +7,26 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Welcome to TutorTrackers.com – Your Premier Destination for Private
+      Tutoring Excellence! Unlock the door to academic success with
+      TutorTrackers.com, your trusted online platform connecting students with
+      top-tier private tutors and teachers. Whether you're navigating the
+      challenges of a tough subject, preparing for exams, or seeking
+      personalized guidance to excel in your studies, TutorTrackers.com is your
+      go-to resource for finding the perfect match."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link
-  rel="stylesheet"
-  href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-  integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
-  crossorigin="anonymous"
-/>
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+      integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
+      crossorigin="anonymous"
+    />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -30,10 +36,18 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Sayantan Mishra | Software Developer</title>
+    <title>Tutor Trackers | Find your tutor</title>
   </head>
   <body>
-    <noscript>SE at Onmobile | Backend Developer | NodeJs | TypeScript | GraphQL | AWS | Lambda | Cognito | Socket.io | sayantanmishra.com</noscript>
+    <noscript
+      >Welcome to TutorTrackers.com – Your Premier Destination for Private
+      Tutoring Excellence! Unlock the door to academic success with
+      TutorTrackers.com, your trusted online platform connecting students with
+      top-tier private tutors and teachers. Whether you're navigating the
+      challenges of a tough subject, preparing for exams, or seeking
+      personalized guidance to excel in your studies, TutorTrackers.com is your
+      go-to resource for finding the perfect match.
+    </noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
